. modify help page to contains other help info: shortcuts of chrome...
. add command 'openHintInTab' which is useful in google search.
. using es module to refactor code, remove large js files(started, ongoing...)
. add function: using <Delete> key to delete bookmark in command bar completetion :bookmarks
. add function: support hint of scrollable element, to do focus.
. fix gotoInput command.
.
. todo: make all operations defined in mappings.js displayed in command mode.
. todo: adjust default insert command according to vim
. todo: inject mappings part doc from code of mapping.js.
. todo: add hint command to show all elements as a backup strategy for f command.(map to F)
. todo: add hint to goto scrollable element (clientHeight vs ..).
. todo: add feature to save and read config in gist.

== WebKey Changelog


## 1.4.6:

 . Fixed `openLastDownload` in #127 #138
 . Fixed `UnicodeDecodeError: 'ascii' codec can't decode byte 0xe2 in position 487: ordinal not in range(128)`  in #139
 . fixed #135 css colors
 . fixed #137 cleared up documentation
 . added #132 tabs detach + goto (outliner based). Only works if chrome keeps the `openerTabId`.
 . fixed #134 disabled chrome url support


## 1.4.5

 . Updated list of `chrome://` completion URLs when `:chrome` is used
 . Fixed issue with `openPasteTab` [#573](https://github.com/1995eaton/chromium-vim/issues/573)
 . Allow global site matches in cVimrc. For example, the following will unmap `j` on all sites:
```
site '*://*' {
  unmap j
}
```
 . Fix issue with certain hints not showing up (like the GitHub profile icon in the top-right corner of the page).
 . Fix [#569](https://github.com/1995eaton/chromium-vim/issues/569) (mappings like `map <C-A-M-i> nextTab` would work, but `map <C-M-A-i> nextTab` wouldn't)
 . Let `@"` represent the paste buffer in command bar commands (e.g. `tabnew wikipedia "@` would search Wikipedia for whatever is in the paste buffer)
 . Make `^` go to beginning of line when in insert mode