@@ -120,10 +120,18 @@
   z-index: 2147483647;
 }
 
+div.cVim-link-hint-scroll {
+  background-color: deepskyblue;
+}
+
+div.cVim-link-hint-input {
+  background-color: gray;
+}
+
 .cVim-link-hint {
   position: absolute;
   color: #302505 !important;
-  background-color: #ffd76e !important;
+  background-color: #ffd76e;
   border-radius: 2px !important;
   padding: 2px !important;
   font-size: 8pt !important;
